--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>2026 札幌雪祭｜最終完美版（盤溪滑雪＋狸小路＋藻岩山夜景）</title>
+<title>2026 札幌雪祭｜可互動編輯版（永久儲存）</title>
 <style>
     body{margin:0;font-family:"Playfair Display",serif;background:#FFFFF0;color:#333;}
     .header{background:linear-gradient(135deg,#4682B4,#FFD700);color:white;padding:3rem 1rem;text-align:center;box-shadow:0 4px 20px rgba(0,0,0,0.1);}
@@ -20,79 +20,95 @@
     .big-btn:hover{background:#FF8C00;color:white;}
     .detail-day{background:white;padding:3rem;border-radius:25px;box-shadow:0 15px 50px rgba(0,0,0,0.15);margin:2rem auto;border:1px solid #4682B4;}
     .hero-img{width:100%;max-height:420px;object-fit:cover;border-radius:20px;margin:1.5rem 0;box-shadow:0 10px 30px rgba(0,0,0,0.2);}
-    .weather-box{background:#e3f2fd;padding:1.2rem;border-radius:10px;margin:1rem 0;border-left:5px solid #4682B4;font-weight:bold;}
-    .step{margin:1.8rem 0;padding:1.6rem;background:#f0f8ff;border-left:8px solid #4682B4;border-radius:12px;line-height:1.8;}
-    .time{color:#c0392b;font-weight:bold;font-size:1.2rem;}
-    .meal{font-weight:bold;color:#B8860B;}
-    .links a{margin:0.5rem;display:inline-block;background:#e3f2fd;padding:0.9rem 1.5rem;border-radius:12px;font-weight:600;}
-    .location-link{color:#0066cc;text-decoration:underline;font-weight:bold;}
-    .packing-list ul{list-style:none;padding:0;max-width:800px;margin:0 auto;}
-    .packing-list li{margin:1.2rem 0;font-size:1.3rem;}
-    .packing-list input[type="checkbox"]{transform:scale(1.8);margin-right:15px;vertical-align:middle;}
-    .save-section{text-align:center;margin:3rem 0;padding:1.5rem;background:#f8f9fa;border-radius:15px;}
-    .save-btn,.export-btn{background:#28a745;color:white;padding:1rem 2rem;border:none;border-radius:10px;font-size:1.2rem;cursor:pointer;margin:0.5rem;}
-    .export-btn{background:#17a2b8;}
+    .weather-box{background:#e3f2fd;padding:1.2rem;border-radius:10px;margin:1rem 0;border-left:5px solid #4682B4;}
+    .step{margin:1.2rem 0;padding:1.4rem;background:#f0f8ff;border-left:8px solid #4682B4;border-radius:12px;line-height:1.8;position:relative;}
+    .step-controls{position:absolute;top:8px;right:8px;}
+    .step-controls button{margin:0 4px;background:#e74c3c;color:white;border:none;padding:4px 8px;border-radius:4px;cursor:pointer;font-size:0.8rem;}
+    .add-step{margin:1rem 0;}
+    .add-step input{width:70%;padding:0.8rem;border:1px solid #ddd;border-radius:8px;}
+    .add-step button{background:#27ae60;color:white;padding:0.8rem 1.2rem;border:none;border-radius:8px;cursor:pointer;}
+    .save-section{text-align:center;margin:3rem 0;padding:2rem;background:#f8f9fa;border-radius:15px;}
+    .save-btn{background:#28a745;color:white;padding:1rem 2rem;border:none;border-radius:10px;font-size:1.3rem;cursor:pointer;margin:0.5rem;}
+    .export-btn{background:#17a2b8;color:white;padding:1rem 2rem;border:none;border-radius:10px;font-size:1.3rem;cursor:pointer;margin:0.5rem;}
+    #importFile{display:none;}
 </style>
 </head>
 <body>
 
 <div class="header">
-    <h1>2026 札幌雪祭 7 天完美行程（最終版）</h1>
-    <p style="font-size:1.5rem;">1月30日 – 2月5日｜盤溪滑雪場＋狸小路夜景＋藻岩山夜景</p>
+    <h1>2026 札幌雪祭｜可互動編輯版（永久儲存）</h1>
+    p style="font-size:1.5rem;">1月30日 – 2月5日｜點「編輯」即可即時修改行程，自動永久保存！</p>
 </div>
 
 <div class="tabs">
-    <div class="tab-btn active" onclick="openTab('overview')">總覽</div>
-    <div class="tab-btn" onclick="openTab('details')">詳細日程表</div>
-    <div class="tab-btn" onclick="openTab('packing')">裝備清單</div>
+    div class="tab-btn active" onclick="openTab('overview')">總覽</div>
+    div class="tab-btn" onclick="openTab('details')">詳細日程表（可編輯）</div>
 </div>
 
 <!-- 總覽 -->
 <div id="overview" class="content active">
-    <div style="max-width:900px;margin:0 auto;">
-        <div class="day"><h2>1月30日 (五) Day 1　抵達＋電視塔夜景</h2><button class="big-btn" onclick="showDetail(1)">查看詳細時間軸</button></div>
-        <div class="day"><h2>1月31日 (六) Day 2　盤溪滑雪場＋狸小路夜景</h2><button class="big-btn" onclick="showDetail(2)">查看詳細時間軸</button></div>
-        <div class="day"><h2>2月1日 (日) Day 3　盤溪滑雪場＋藻岩山夜景</h2><button class="big-btn" onclick="showDetail(3)">查看詳細時間軸</button></div>
-        <div class="day"><h2>2月2日 (一) Day 4　定山溪溫泉放空</h2><button class="big-btn" onclick="showDetail(4)">查看詳細時間軸</button></div>
-        <div class="day"><h2>2月3日 (二) Day 5　小樽運河浪漫一日</h2>
-            <p style="color:#8B4513;margin:1rem 0;">下午茶：LeTAO 本店雙層起司蛋糕</p>
-            <button class="big-btn" onclick="showDetail(5)">查看詳細時間軸</button>
-        </div>
-        <div class="day" style="border-left:16px solid #e74c3c;"><h2>2月4日 (三) Day 6　2026雪祭開幕日全天狂歡！</h2><button class="big-btn" style="background:#e74c3c;color:white;" onclick="showDetail(6)">立即查看雪祭時間軸</button></div>
-        <div class="day"><h2>2月5日 (四) Day 7　掃貨＋返程</h2><button class="big-btn" onclick="showDetail(7)">查看詳細時間軸</button></div>
-    </div>
-
-    <div style="text-align:center;margin:4rem;">
-        <h2>2026 雪祭7天總預算（HK$）</h2>
-        人數 <input type="number" id="p" value="2" min="1" style="padding:0.8rem;width:100px;">
-        <button onclick="calc()" style="background:#FFD700;padding:1rem 2.5rem;border:none;border-radius:12px;margin-left:1rem;font-size:1.3rem;cursor:pointer;">計算</button>
-        <p id="out" style="font-size:3.5rem;margin:2rem;font-weight:bold;color:#c0392b;">HK$14,200（2人）</p>
+    div style="max-width:900px;margin:0 auto;">
+        <div class="day"><h2>1月30日 (五) Day 1　抵達＋電視塔夜景</h2><button class="big-btn" onclick="showDetail(1)">進入編輯模式</button></div>
+        <div class="day"><h2>1月31日 (六) Day 2　盤溪滑雪場＋狸小路夜景</h2><button class="big-btn" onclick="showDetail(2)">進入編輯模式</button></div>
+        <div class="day"><h2>2月1日 (日) Day 3　盤溪滑雪場＋藻岩山夜景</h2><button class="big-btn" onclick="showDetail(3)">進入編輯模式</button></div>
+        <div class="day"><h2>2月2日 (一) Day 4　定山溪溫泉</h2><button class="big-btn" onclick="showDetail(4)">進入編輯模式</button></div>
+        <div class="day"><h2>2月3日 (二) Day 5　小樽運河浪漫一日</h2><button class="big-btn" onclick="showDetail(5)">進入編輯模式</button></div>
+        <div class="day" style="border-left:16px solid #e74c3c;"><h2>2月4日 (三) Day 6　雪祭開幕日</h2><button class="big-btn" style="background:#e74c3c;color:white;" onclick="showDetail(6)">進入編輯模式</button></div>
+        <div class="day"><h2>2月5日 (四) Day 7　掃貨＋返程</h2><button class="big-btn" onclick="showDetail(7)">進入編輯模式</button></div>
     </div>
 </div>
 
-<!-- 詳細日程表 -->
+<!-- 詳細日程表（可編輯） -->
 <div id="details" class="content">
     <div id="detail-content" style="max-width:1000px;margin:0 auto;"></div>
+    
     <div class="save-section">
-        <button class="save-btn" onclick="alert('已保存！下次開啟會自動記住變更')">保存所有變更（本地）</button>
+        <button class="save-btn" onclick="saveAll()">保存所有變更（永久儲存）</button>
+        <button class="export-btn" onclick="exportData()">匯出為JSON（分享用）</button>
+        <input type="file" id="importFile" onchange="importData(event)">
+        <button class="save-btn" onclick="document.getElementById('importFile').click()">匯入JSON</button>
+        <p style="margin-top:1rem;color:#666;">變更會自動儲存在你的瀏覽器，下次打開還在！</p>
     </div>
-</div>
-
-<!-- 裝備清單 -->
-<div id="packing" class="content">
-    <h2 style="text-align:center;color:#2c3e50;">北海道極寒裝備清單</h2>
-    <ul class="packing-list">
-        <li><input type="checkbox"> 極厚羽絨服（-20°C）</li>
-        <li><input type="checkbox"> 防水滑雪褲＋雪靴</li>
-        <li><input type="checkbox"> 滑雪手套＋雪鏡</li>
-        <li><input type="checkbox"> 暖暖包（20包以上）</li>
-        <li><input type="checkbox"> 保濕面霜＋護唇膏</li>
-        <li><input type="checkbox"> 泳裝（溫泉用）</li>
-        <li><input type="checkbox"> 行動電源＋長充電線</li>
-    </ul>
 </div>
 
 <script>
+// 預設行程資料（會自動載入你上次修改的版本）
+let itinerary = JSON.parse(localStorage.getItem('sapporo2026') || `{
+    "1": {
+        "title": "1月30日 (五) Day 1　抵達＋電視塔夜景",
+        "img": "https://images.unsplash.com/photo-1542640759-56b6a1b8e14f?w=1400&q=85",
+        "weather": "高溫 -4°C / 低溫 -11°C，輕雪",
+        "steps": [
+            "14:00 – 15:30　新千歲機場 → JR快速Airport → 札幌站",
+            "16:00 – 18:30　Check-in + 大通公園散策",
+            "19:00 – 20:30　晚餐：湯咖喱 Garaku（<a href='https://tabelog.com/en/hokkaido/A0101/A010103/1057998/' target='_blank'>Tabelog</a>）",
+            "20:30 – 22:00　<a href='https://www.tv-tower.co.jp/en/' target='_blank'>札幌電視塔夜景</a>"
+        ]
+    },
+    "2": {
+        "title": "1月31日 (六) Day 2　盤溪滑雪場＋狸小路夜景",
+        "img": "https://images.unsplash.com/photo-1605546146549-4c3c4d6d826a?w=1400&q=85",
+        "weather": "高溫 -1°C / 低溫 -10°C，輕雪",
+        "steps": [
+            "08:30 – 16:00　<a href='https://www.bankei.co.jp/english/' target='_blank'>盤溪滑雪場</a>",
+            "17:30 – 22:30　<a href='https://tanukikoji.or.jp/' target='_blank'>狸小路逛街＋居酒屋</a>"
+        ]
+    },
+    "3": {
+        "title": "2月1日 (日) Day 3　盤溪滑雪場＋藻岩山夜景",
+        "img": "https://images.unsplash.com/photo-1573564971333-2ec6d9c7d9c5?w=1400&q=85",
+        "weather": "高溫 -2°C / 低溫 -8°C，晴",
+        "steps": [
+            "09:00 – 16:00　盤溪滑雪場",
+            "19:00 – 21:30　<a href='https://mt-moiwa.jp/en/' target='_blank'>藻岩山夜景</a>"
+        ]
+    },
+    "4": { "title": "2月2日 (一) Day 4　定山溪溫泉", "img": "https://images.unsplash.com/photo-1604431514118-5d32c97cc4f8?w=1400&q=85", "weather": "高溫 -3°C / 低溫 -9°C", "steps": ["09:30 – 18:00　泡湯＋散策"] },
+    "5": { "title": "2月3日 (二) Day 5　小樽運河", "img": "https://images.unsplash.com/photo-1542914076-8d07ae7263e9?w=1400&q=85", "weather": "高溫 -2°C / 低溫 -8°C", "steps": ["09:15 – 18:30　運河＋LeTAO下午茶"] },
+    "6": { "title": "2月4日 (三) Day 6　雪祭開幕日", "img": "https://images.unsplash.com/photo-1542897599-9a25b69a7d08?w=1400&q=85", "weather": "高溫 -3°C / 低溫 -9°C", "steps": ["10:00 – 22:00　大通＋薄野＋Tsudome"] },
+    "7": { "title": "2月5日 (四) Day 7　掃貨＋返程", "img": "https://images.unsplash.com/photo-1559598467-f8b76c5f2b3f?w=1400&q=85", "weather": "高溫 -4°C / 低溫 -10°C", "steps": ["09:00 – 14:00　購物＋機場"] }
+}`);
+
 function openTab(tab){
     document.querySelectorAll('.content').forEach(c=>c.classList.remove('active'));
     document.getElementById(tab).classList.add('active');
@@ -101,72 +117,95 @@ function openTab(tab){
 }
 
 function showDetail(day){
-    const details = {
-        1: `<div class="detail-day">
-            <div class="weather-box">1月30日天氣：-4°C / -11°C，輕雪，穿厚羽絨+圍巾</div>
-            <img src="https://images.unsplash.com/photo-1542640759-56b6a1b8e14f?w=1400&q=85" class="hero-img" alt="札幌電視塔夜景">
-            <h2>1月30日 (五) Day 1　抵達＋電視塔夜景</h2>
-            <div class="step"><span class="time">14:00 – 15:30</span>　新千歲機場 → JR快速Airport</div>
-            <div class="step"><span class="time">19:00 – 20:30</span>　晚餐：湯咖喱 Garaku（<a href="https://tabelog.com/en/hokkaido/A0101/A010103/1057998/" target="_blank">Tabelog</a>）</div>
-            <div class="step"><span class="time">20:30 – 22:00</span>　<a href="https://www.tv-tower.co.jp/en/" target="_blank">札幌電視塔夜景</a></div>
-            <div class="links"><a href="https://www.google.com/maps/dir/New+Chitose+Airport/Sapporo+TV+Tower" target="_blank" class="location-link">札幌電視塔位置</a></div></div>`,
+    const data = itinerary[day];
+    let html = `<div class="detail-day">
+        <div class="weather-box"><strong>${data.title.split('　')[0]} 天氣：</strong>${data.weather}</div>
+        <img src="${data.img}" class="hero-img" alt="${data.title}">
+        <h2>${data.title}</h2>
+        <button onclick="addStep(${day})" style="background:#27ae60;color:white;padding:0.8rem;margin:1rem 0;border:none;border-radius:8px;cursor:pointer;">+ 新增一行</button>`;
 
-        2: `<div class="detail-day">
-            <div class="weather-box">1月31日天氣：-1°C / -10°C，輕雪，適合滑雪</div>
-            <img src="https://images.unsplash.com/photo-1605546146549-4c3c4d6d826a?w=1400&q=85" class="hero-img" alt="盤溪滑雪場">
-            <h2>1月31日 (六) Day 2　盤溪滑雪場＋狸小路夜景</h2>
-            <div class="step"><span class="time">09:00 – 16:00</span>　<a href="https://www.bankei.co.jp/english/" target="_blank">札幌盤溪滑雪場</a></div>
-            <div class="step"><span class="time">17:30 – 22:30</span>　<a href="https://tanukikoji.or.jp/" target="_blank">狸小路夜間逛街＋居酒屋</a></div>
-            <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Sapporo+Bankei+Ski+Area" target="_blank" class="location-link">盤溪滑雪場位置</a></div></div>`,
+    data.steps.forEach((step, i) => {
+        html += `<div class="step" id="step-${day}-${i}">
+            <div class="step-controls">
+                <button onclick="moveUp(${day},${i})">↑</button>
+                <button onclick="moveDown(${day},${i})">↓</button>
+                <button onclick="deleteStep(${day},${i})">×</button>
+            </div>
+            <span contenteditable="true" onblur="updateStep(${day},${i}, this.innerHTML)">${step}</span>
+        </div>`;
+    });
 
-        3: `<div class="detail-day">
-            <div class="weather-box">2月1日天氣：-2°C / -8°C，晴，完美夜景日</div>
-            <img src="https://images.unsplash.com/photo-1573564971333-2ec6d9c7d9c5?w=1400&q=85" class="hero-img" alt="藻岩山夜景">
-            <h2>2月1日 (日) Day 3　盤溪滑雪場＋藻岩山夜景</h2>
-            <div class="step"><span class="time">09:00 – 16:00</span>　盤溪滑雪場自由滑</div>
-            <div class="step"><span class="time">19:00 – 21:30</span>　<a href="https://mt-moiwa.jp/en/" target="_blank">藻岩山纜車夜景</a></div>
-            <div class="links"><a href="https://www.google.com/maps/place/Mount+Moiwa+Ropeway" target="_blank" class="location-link">藻岩山纜車位置</a></div></div>`,
-
-        4: `<div class="detail-day">
-            <div class="weather-box">2月2日天氣：-3°C / -9°C，多雲轉晴</div>
-            <img src="https://images.unsplash.com/photo-1604431514118-5d32c97cc4f8?w=1400&q=85" class="hero-img" alt="定山溪溫泉">
-            <h2>2月2日 (一) Day 4　定山溪溫泉</h2>
-            <div class="step"><span class="time">09:30 – 18:00</span>　泡湯＋散策</div>
-            <div class="links"><a href="https://jozankei.jp/en/" target="_blank">定山溪官網</a>｜<a href="https://www.google.com/maps/dir/Sapporo+Station/Jozankei+Onsen" target="_blank" class="location-link">定山溪溫泉位置</a></div></div>`,
-
-        5: `<div class="detail-day">
-            <div class="weather-box">2月3日天氣：-2°C / -8°C，輕雪</div>
-            <img src="https://images.unsplash.com/photo-1542914076-8d07ae7263e9?w=1400&q=85" class="hero-img" alt="小樽運河">
-            <h2>2月3日 (二) Day 5　小樽運河浪漫一日</h2>
-            <div class="step"><span class="time">09:15 – 12:30</span>　<a href="https://www.otaru.gr.jp/en" target="_blank">運河散策</a></div>
-            <div class="step"><span class="time">14:30 – 16:00</span>　<span class="meal">下午茶：LeTAO 本店</span></div>
-            <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Otaru+Canal" target="_blank" class="location-link">小樽運河位置</a></div></div>`,
-
-        6: `<div class="detail-day">
-            <div class="weather-box">2月4日天氣：-3°C / -9°C，雪花紛飛，雪祭開幕！</div>
-            <img src="https://images.unsplash.com/photo-1542897599-9a25b69a7d08?w=1400&q=85" class="hero-img" alt="札幌雪祭">
-            <h2>2月4日 (三) Day 6　2026雪祭開幕日</h2>
-            <div class="step"><span class="time">10:00 – 22:00</span>　<a href="https://www.snowfes.com/en/" target="_blank">大通公園＋薄野＋Tsudome</a></div>
-            <div class="links"><a href="https://www.google.com/maps/place/Odori+Park" target="_blank" class="location-link">大通公園雪祭會場位置</a></div></div>`,
-
-        7: `<div class="detail-day">
-            <div class="weather-box">2月5日天氣：-4°C / -10°C，多雲</div>
-            <img src="https://images.unsplash.com/photo-1559598467-f8b76c5f2b3f?w=1400&q=85" class="hero-img" alt="新千歲機場">
-            <h2>2月5日 (四) Day 7　掃貨＋返程</h2>
-            <div class="step"><span class="time">09:00 – 12:00</span>　JR Tower + 百貨購物</div>
-            <div class="step"><span class="time">12:30 – 14:00</span>　機場拉麵道場午餐</div>
-            <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/New+Chitose+Airport" target="_blank" class="location-link">新千歲機場位置</a></div></div>`
-    };
-    document.getElementById('detail-content').innerHTML = details[day];
+    html += `</div>`;
+    document.getElementById('detail-content').innerHTML = html;
     openTab('details');
 }
 
-function calc(){
-    const p=parseInt(document.getElementById('p').value)||1;
-    const total=7100*p;
-    document.getElementById('out').innerHTML=`HK$${total.toLocaleString()}（${p}人）`;
+function addStep(day){
+    const text = prompt("輸入新行程（可加HTML，例如連結）：");
+    if(text){
+        itinerary[day].steps.push(text);
+        showDetail(day);
+        saveAll();
+    }
 }
-calc();
+
+function updateStep(day, index, newText){
+    itinerary[day].steps[index] = newText;
+    saveAll();
+}
+
+function moveUp(day, index){
+    if(index > 0){
+        [itinerary[day].steps[index-1], itinerary[day].steps[index]] = [itinerary[day].steps[index], itinerary[day].steps[index-1]];
+        showDetail(day);
+        saveAll();
+    }
+}
+
+function moveDown(day, index){
+    if(index < itinerary[day].steps.length-1){
+        [itinerary[day].steps[index], itinerary[day].steps[index+1]] = [itinerary[day].steps[index+1], itinerary[day].steps[index]];
+        showDetail(day);
+        saveAll();
+    }
+}
+
+function deleteStep(day, index){
+    itinerary[day].steps.splice(index, 1);
+    showDetail(day);
+    saveAll();
+}
+
+function saveAll(){
+    localStorage.setItem('sapporo2026', JSON.stringify(itinerary));
+    alert('已自動永久保存！');
+}
+
+function exportData(){
+    const data = new Blob([JSON.stringify(itinerary, null, 2)], {type: 'application/json'});
+    const url = URL.createObjectURL(data);
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = '我的札幌行程.json';
+    a.click();
+}
+
+function importData(e){
+    const file = e.target.files[0];
+    if(!file) return;
+    const reader = new FileReader();
+    reader.onload = e => {
+        try{
+            itinerary = JSON.parse(e.target.result);
+            alert('匯入成功！');
+            location.reload();
+        }catch{ alert('檔案格式錯誤'); }
+    };
+    reader.readAsText(file);
+}
+
+// 首次載入顯示 Day 1
+showDetail(1);
 </script>
 </body>
 </html>
